--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reactjs-bootstrap",
+  "name": "case-converter",
   "version": "1.0.0",
-  "description": "React.js Bootstrap",
+  "description": "A simple React.js application that converts strings to different cases using Lodash.",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/neverendingqs-sandbox/reactjs-bootstrap.git"
+    "url": "git+https://github.com/neverendingqs/case-converter"
   },
   "keywords": [
     "react.js",
@@ -19,9 +19,9 @@
   "author": "neverendingqs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/neverendingqs-sandbox/reactjs-bootstrap/issues"
+    "url": "https://github.com/neverendingqs/case-converter/issues"
   },
-  "homepage": "https://github.com/neverendingqs-sandbox/reactjs-bootstrap#readme",
+  "homepage": "https://github.com/neverendingqs/case-converter#readme",
   "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
