--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "buefy": "^0.8.0",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
