--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "buefy": "^0.8.0",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1"
