chore - add netlify redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   base    = "."
   publish = "dist"
   command = "npm run build"
+
+[[redirects]]
+  from = "/*"
+  to = "https://tools.neverendingqs.com/stringutils"
+  status = 302
+  force = true
